--- a/Resources/ModelColourEditorImportMaterialsTemplate.uxml
+++ b/Resources/ModelColourEditorImportMaterialsTemplate.uxml
@@ -1,4 +1,4 @@
-<UXML xmlns="UnityEngine.UIElements" xmlns:ue="UnityEditor.UIElements" xmlns:ce="CustomUIElements">
+<UXML xmlns="UnityEngine.UIElements" xmlns:ue="UnityEditor.UIElements" xmlns:ce="ModelColourEditor">
     <VisualElement name="importMaterialColoursGroup" class="horizontal-group import-material-colors-group">
         <Label name="importMaterialColoursName" text="Model" />
         <Button name="enableMaterialColoursButton" text="Enable" />
