Made "import material colours by default" setting work. Added reset button for individual Import Material Colours to revert to default behaviour.

--- a/Assets/Resources/ModelColourEditorImportMaterialsTemplate.uxml
+++ b/Assets/Resources/ModelColourEditorImportMaterialsTemplate.uxml
@@ -3,5 +3,6 @@
         <Label name="importMaterialColoursName" text="Model" />
         <Button name="enableMaterialColoursButton" text="Enable" />
         <Button name="disableMaterialColoursButton" text="Disable" />
+        <Button name="resetMaterialColoursButton" class="import-material-colors-group__reset" text="↻" tooltip="Reset to Default" />
     </VisualElement>
 </UXML>
