--- a/Assets/Resources/ModelColourStyles.uss
+++ b/Assets/Resources/ModelColourStyles.uss
@@ -21,7 +21,7 @@
     font-size: 13px;
 }
 
-.tab-container__button.active
+Button.active
 {
     background-color: #6F6F6F;
     color: #F4F4F4;
@@ -118,6 +118,17 @@ ModelColourEditorPreviewElement
 {
     flex-grow: 0; 
     width: 100px;
+}
+
+.preview__label
+{
+    flex-grow: 1;
+}
+
+.preview__label-container
+{
+    display: flex;
+    flex-direction: row;
 }
 
 .preview__hex Label
