--- a/Resources/ModelColourEditorPreviewTemplate.uxml
+++ b/Resources/ModelColourEditorPreviewTemplate.uxml
@@ -1,10 +1,12 @@
 <UXML xmlns="UnityEngine.UIElements" xmlns:ue="UnityEditor.UIElements">
-    <Label class="preview__label" text="Current Mesh Colours" />
+    <VisualElement class="preview__label-container">
+        <Label class="preview__label" text="Current Mesh Colours" />
+        <Button name="previewSelectAllButton" text="Select All" />
+    </VisualElement>
     <ScrollView mode="Horizontal">
         <VisualElement name="previewElementContainer" class="preview__color-container">
             <VisualElement class="preview__color-element" />
         </VisualElement>
     </ScrollView>
-    <TextField name ="previewHexField" class="preview__hex" label="Hex" />
     <TextElement name="previewNoColoursSet" class="preview__no-colours-set" text="No colours set" />
 </UXML>
